Add GType annotations to Cairo structures

To get GValue marshalling we need to ensure that all
Cairo constructors have correct $gtype properties.

https://bugzilla.gnome.org/show_bug.cgi?id=705465