modules/cairo-surface.cpp
@@ -26,6 +26,7 @@
 #include <gjs/compat.h>
 #include <gi/foreign.h>
 #include <cairo.h>
+#include <cairo-gobject.h>
 #include "cairo-private.h"
 
 typedef struct {
@@ -35,7 +36,7 @@ typedef struct {
     cairo_surface_t *surface;
 } GjsCairoSurface;
 
-GJS_DEFINE_PROTO_ABSTRACT("CairoSurface", cairo_surface)
+GJS_DEFINE_PROTO_ABSTRACT_WITH_GTYPE("CairoSurface", cairo_surface, CAIRO_GOBJECT_TYPE_SURFACE)
 GJS_DEFINE_PRIV_FROM_JS(GjsCairoSurface, gjs_cairo_surface_class)
 
 static void
